finished implementing the game

--- a/index.html
+++ b/index.html
@@ -6,14 +6,5 @@
     <title>Rock Paper Scissors</title>
     <script src="script.js"></script>
   </head>
-  <body>
-    <h1>Rock Paper Scissors</h1>
-    <label for="rpsChoice">Choose one:</label>
-    <select id="rpsChoice">
-      <option value="rock">Rock</option>
-      <option value="paper">Paper</option>
-      <option value="scissors">scissors</option>
-    </select>
-    <button id="choiceButton">Confirm</button>
-  </body>
+  <body></body>
 </html>
