--- a/index.html
+++ b/index.html
@@ -4,7 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock Paper Scissors</title>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <div>
+      <button id="Paper">PAPER</button>
+      <button id="Scissors">SCISSORS</button>
+      <button id="Rock">ROCK</button>
+    </div>
+    <br />
+    <div>
+      Result:
+      <div id="result"></div>
+    </div>
+  </body>
 </html>
